后台管理系统

--- a/src/config/persistence/config.properties
+++ b/src/config/persistence/config.properties
@@ -1,6 +1,6 @@
 driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://123.57.212.159:3306/xinfeng?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
+jdbc_url=jdbc:mysql://127.0.0.1:3306/xinfeng?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false
 jdbc_username=xinfeng
 jdbc_password=xinfeng
 jdbc_name=xinfeng
-#127.0.0.1
+#123.57.212.159
